added most new modules description in italian language
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6096 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/it/foxtrick.properties
+++ b/content/locale/it/foxtrick.properties
@@ -1,6 +1,6 @@
 # ITALIAN language file (update to r4557 master language file)
 # utf-8 encoded it-IT language file
-# By Caracca, Sam-Vimes
+# By Caracca, Sam-Vimes, taised
 
 # Module descriptions
 # WARNING: your module description has to have the name foxtrick.MODULE_NAME.desc
@@ -24,6 +24,9 @@ foxtrick.AttVsDef.oldstyleifkseperated.desc=Vecchio stile (punizioni indirette s
 foxtrick.Ratings.desc=Aggiunge indicatori sintetici alla pagina della partita
 foxtrick.BookmarkAdjust.desc=Cambia il colore dell'icona associata ad un segnalibro se si inserisce nella descrizione il codice corrispondente: esempio [red] visualizzerà l'icona in rosso. Possibili valori: aqua, B, black, blue, brown, cyan, darkpurple, green, idea, lightblue, lightgreen, orange, pink, purple, red, white, yellow
 foxtrick.FoxtrickAlert.desc=Visualizza una notifica pop-up e sonora quando viene segnalato un nuovo evento di hattrick, anche se stai facendo altro al momento
+foxtrick.FoxtrickAlert.AlertSlider.desc=Mostra il popup di avviso
+foxtrick.FoxtrickAlert.AlertSliderGrowl.desc=Mostra growl notification (Solo per Mac)
+foxtrick.FoxtrickAlert.AlertSound.desc=Emetti un suono di avviso
 foxtrick.FoxtrickAlert.NewMail.desc=Visualizza una notifica pop-up quando arrivano nuove HT-Mail (funzionalità per non-supporter)
 foxtrick.FoxtrickAlert.NewForum.desc=Visualizza una notifica pop-up quando arrivano nuovi messaggi nel forum (funzonalità per non-supporter)
 foxtrick.AlertCustomSounds.desc=Suoni personalizzati per le notifiche: le voci non spuntate riproducono il suono di default, le voci spuntate e lasciate in bianco non riproducono alcun suono
@@ -143,14 +146,21 @@ foxtrick.ForumLastPost.desc=Nelle conversazioni già lette, salta direttamente a
 foxtrick.ForumLastPost.lastpage.desc=Salta all'ultima pagina anziché all'ultimo messaggio
 foxtrick.AdvancedStarsCounter.desc=Aggiunge statistiche dettagliate sulle stelle nella pagina della formazione nella partita
 foxtrick.MatchPlayerColouring.desc=Colora i giocatori a seconda della squadra nel report della partita. Se si arriva al report della partita dalla pagina di un giocatore, evidenzia in rosso solo il giocatore stesso.
+foxtrick.MatchPlayerColouring.SeparateOwnPlayerColors.desc=Separa il colore dei propri giocatori
 foxtrick.MatchReportFormat.desc=Modifica il resoconto delle partite evidenziando i singoli eventi. Si possono definire colori personalizzati.
 foxtrick.ForumRedirManagerToTeam.desc=Salta direttamente alla pagina della squadra anziché a quella dell'utente quando si clicca sul nome di un utente nel forum
 foxtrick.ManagerButtons.addGuestbooklink.desc=Aggiunge 'Invia Messaggio' e 'Scrivi nel Libro degli Ospiti' nella pagina dell'utente
 foxtrick.HTThreadMarker.desc=Evidenzia discussioni create dagli HT
 foxtrick.TeamStats.desc=Compila una panoramica della squadra, aggiunge filtri e informazioni extra per i giocatori
+foxtrick.TeamStats.General.desc=Informazioni generali (TSI/età)
+foxtrick.TeamStats.Speciality.desc=Specialità
+foxtrick.TeamStats.Personality.desc=Personalità
+foxtrick.TeamStats.Status.desc=Status (cartellini/infortuni)
+foxtrick.TeamStats.Current_league.desc=Serie attuale
 foxtrick.ExtraPlayerInfo.Flag.desc=Aggiunge le bandiere della nazionalità ai giocatori
 foxtrick.ExtraPlayerInfo.LeadershipAndExperience.desc=Aggiunge carisma ed esperienza ai giocatori
 foxtrick.ExtraPlayerInfo.CoachInfo.desc=Aggiunge l'atteggiamento dell'allenatore presente e di quello precedente
+foxtrick.PlayerFilters.desc=Aggiungi un menu tendina per filtrare i giocatori nella pagina della squadra
 foxtrick.HistoryStats.desc=Compila una sintesi della storia del club
 foxtrick.HistoryStats.season=stagione
 foxtrick.HistoryStats.cup=coppa
@@ -209,21 +219,16 @@ foxtrick.SkinPlugin.Skin2.desc=Attiva skin 2
 foxtrick.CurrencyConverter.desc=Converti valuta HT
 foxtrick.MovePlayerStatement.desc=Sposta le dichiarazioni del giocatore in un'icona all'interno della figurina. Se le figurine sono disabilitate, le dichiarazioni saranno rimosse.
 foxtrick.TickerColoring.desc=Colora i differenti eventi visualizzati nel ticker
-foxtrick.TickerColoring.LoginWelcome.desc=Benvenuto
-foxtrick.TickerColoring.LoginSupporters.desc=Login di squadre supportate
-foxtrick.TickerColoring.ForumReplyToMe.desc=Risposte nel forum
-foxtrick.TickerColoring.TransferMarket.desc=Aggiornamenti sui trasferimenti
-foxtrick.TickerColoring.Challenges.desc=Sfide
-foxtrick.TickerColoring.Guestbook.desc=Nuovi messaggi nel libro degli ospiti
-foxtrick.TickerColoring.MailToMe.desc=Nuove HT-Mail
-foxtrick.TickerColoring.MyHTMessages.desc=Nuovi editoriali e messaggi MyHT
-foxtrick.TickerColoring.Hover.desc=Evidenza al passaggio del mouse
 foxtrick.ExtraShortcuts.desc=Aggiunge alcune icone alle scorciatoie principali
 foxtrick.ExtraShortcuts.AddLeft.desc=Se selezionato, le icone compariranno a sinistra di quelle principali, altrimenti a destra
+foxtrick.ExtraShortcuts.AddSpace.desc=Aumenta lo spazio per le icone
 foxtrick.ExtraShortcuts.Supporterstats.desc=Icona statistiche dei supporter
 foxtrick.ExtraShortcuts.Transfers.desc=Icona propria storia trasferimenti
 foxtrick.ExtraShortcuts.Prefs.desc=Icona preferenze di Hattrick
 foxtrick.ExtraShortcuts.FoxTrickPrefs.desc=Icona preferenze di Foxtrick
+foxtrick.ExtraShortcuts.HtRadioWinamp.desc=Link a Hattrick Radio (Belgio/Olanda) (Winamp)
+foxtrick.ExtraShortcuts.HtRadioMediaPlayer.desc=Link a Hattrick Radio (Belgio/Olanda) (Windows Media Player)
+foxtrick.ExtraShortcuts.DTRadioWinamp.desc=Link a Radio downtime (DACHL) (Winamp)
 foxtrick.CopyMatchID.desc=Copia l'ID della partita quando si seleziona l'icona della partita. Per i supporter funziona anche nelle pagine della situazione prepartita
 foxtrick.HeaderFix.desc=Fissa l'intestazione della pagina mentre si scorre (funziona su tutte le pagine di HT)
 foxtrick.HeaderFix.FixLeft.desc=Fissa anche il sottomenu
@@ -232,6 +237,10 @@ foxtrick.GoaldifferenceToTables.desc=Aggiunge alla tabella promozioni e alla tab
 foxtrick.CrossTable.desc=Aggiunge al calendario un grafico con le posizioni in classifica e una tabella che mostra tutti i risultati delle partite di campionato
 foxtrick.ElectionTable.desc=Aggiunge le percentuali alla tavola delle elezioni (basate sul numero di voti visibili)
 foxtrick.ContextMenuCopy.desc=Aggiunge un'opzione nel menu contestuale per copiare gli id (squadra, utente...)
+foxtrick.ContextMenuCopy.Id.desc=Opzione per copiare l'ID
+foxtrick.ContextMenuCopy.Link.desc=Opzione per copiare il link in HT-ML
+foxtrick.ContextMenuCopy.HtMl.desc=Opzione per copiare il contenuto selezionato in HT-ML
+foxtrick.ContextMenuCopy.Table.desc=Opzione per copiare le tabelle in HT-ML
 foxtrick.NewMail.desc=Evidenzia l'arrivo di nuovi messaggi HT-Mail
 foxtrick.NewMail.CustomColor.desc=Colore personalizzato a seconda del numero di mail. Può richiedere il riavvio.
 foxtrick.NewMail.HighlightNewMailIcon.desc=Evidenzia in rosso l'icona dell'HT-Mail quando ci sono nuovi messaggi. Può richiedere il riavvio.
@@ -363,10 +372,33 @@ foxtrick.LeagueAndMatchChat.desc=Aggiunge collegamenti ad una chat esterna alle 
 foxtrick.LeagueAndMatchChat.OpenAsFrame.desc=Apre la chat come frame all'interno della pagina di hattrick
 foxtrick.LeagueAndMatchChat.ChatNick.desc=Il tuo nickname per la chat
 foxtrick.RapidId.desc=Aggiunge una comoda casella di input in cima alla pagina per visualizzare squadre, giocatori, ecc. mediante l'ID
+foxtrick.YouthSeriesEstimation.desc=Nei risultati della ricerca, stima la data di partenza delle serie che sono nella pausa stagionale
 foxtrick.ReadHtPrefsFromHeader.desc=Aggiusta automaticamente le impostazioni per Foxtrick
 foxtrick.ReadHtPrefsFromHeader.Language.desc=Definisce la lingua
 foxtrick.ReadHtPrefsFromHeader.CountryCurrencyDateFormat.desc=Definisce il paese, il formato della data e la valuta
-foxtrick.CopyPosting.CopyWikiStyle.desc=Copia in formato Hattrick Wiki
+foxtrick.LocalTime.desc=Mostra l'ora locale invece che l'ora di HT. Clicca sull'orologio per passare da una visualizzazione all'altra
+foxtrick.LocalTime.DefaultLocal.desc=Mostra l'ora locale di default
+foxtrick.ForumThreadAutoIgnore.desc=Automaticamente ignora discussioni nel forum con i tag selezionati (discussioni con [Tag] o {Tag}).
+foxtrick.ForumThreadAutoIgnore.Tags.desc=Lista dei tag, es: NT, idea, Bug. Separati da virgola, senza distinzione tra minuscole e maiuscole
+foxtrick.ForumThreadAutoIgnore.Whitelist_ThreadIDs.desc=Lista delle discussioni da segnare per ID (la parte prima del punto). Le discussioni inserite qui non saranno ignorate. Separare i valori con la virgola.
+foxtrick.TableSort.desc=Rendi tutte le tabelle con una intestazione (incluse le tabelle nei messaggi dei forum)
+foxtrick.LiveAlert.desc=Avviso per i gol in HT Live
+foxtrick.OldStyleFace.desc=Mostra le facce nel vecchio stile di Hattrick
+foxtrick.NtPeek.desc=Mostra le partite NT/U20 nel Mio Hattrick
+foxtrick.SeriesFlags.desc=Mostra le bandierine con nazione e serie dell'utente vicino al link dell'utente o della squadra (immagini fornite da HTMS)
+foxtrick.SeriesFlags.Guestbook.desc=Mostra per il libro degli ospiti
+foxtrick.SeriesFlags.Supporters.desc=Mostra nel riquadro con la lista dei supporter nella pagina della squadra
+foxtrick.SeriesFlags.Visitors.desc=Mostra nel riquadro degli ultimi visitatori
+foxtrick.SeriesFlags.Oldies.desc=Mostra nei giocatori nati con la squadra e per quelli ora allenatori
+foxtrick.SeriesFlags.CountryOnly.desc=Se selezionato mostra solo la nazione senza la serie
+foxtrick.HTMSPoints.desc=Mostra i punti allenamento (HTMS points) calcolati tramite la tabella delle skill HTMS
+foxtrick.HTMSPoints.AddToPlayer.desc=Mostra nella pagina del giocatore
+foxtrick.HTMSPoints.AddToSearchResult.desc=Mostra nella pagina con i risultati della ricerca nel mercato
+foxtrick.HTMSPoints.AddToPlayerList.desc=Mostra nella pagina dei giocatori della propria squadra
+foxtrick.FriendlyInterface.desc=Aggiustamenti per avere un'interfaccia migliore
+foxtrick.FriendlyInterface.FullPlayerNameInLineUp.desc=Mostra i nomi completi dei giocatori nella pagina con la formazione
+foxtrick.FriendlyInterface.NtLinkForNtPlayer.desc=Mostra le squadre nazionali come link per i giocatori di una nazionale (NT o U20)
+foxtrick.FriendlyInterface.HideAnswerTo.desc=Nascondi il link "Scrivi nel guestbook di ..." nel libro degli ospiti
 #-----------------------------------------------------------------------------
 
 
@@ -460,8 +492,12 @@ sendmessage=Invia
 
 #Forums
 foxtrick.CopyPostID=Copia ID messaggio negli appunti
-foxtrick.CopyPosting=Copia messaggio negli appunti
-foxtrick.Collapse=Visualizza o nascondi icone collegamento
+CopyPosting=Copia messaggio con lo stile %s 
+CopyPosting.abbr=Copia in stile %s
+CopyPosting.style.ht-ml=HT-ML
+CopyPosting.style.wiki=wiki
+CopyPosting.style.raw=in linea
+CopyPosting.style.last=ultimo
 
 ForumYouthIcons.label=Collegamenti della squadra giovanile
 ForumYouthIcons.labelToolbar=Collegamenti principali
