Serbian Translation update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6097 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -343,6 +343,7 @@ foxtrick.SeriesFlags.Guestbook.desc=Приказује заставице држ
 foxtrick.SeriesFlags.Supporters.desc=Додаје заставице држава и лигу корисника у листу супортера на страници клуба
 foxtrick.SeriesFlags.Visitors.desc=Додаје заставице држава и лигу корисника у листу посетилаца на страницама клуба, лиге (сениорске и омладинске) и на страницама федерација
 foxtrick.SeriesFlags.Oldies.desc=Додаје заставице држава и лигу корисника на страници играча и тренера пониклих у клубу
+foxtrick.SeriesFlags.CountryOnly.desc=Прикажи само заставице држава
 foxtrick.HTMSPoints.desc=На страници играча приказује HTMS тренинг бодове у формату 'вештинe: хххх / потенцијал: уууу'. Прва вредност, 'хххх', представља тренутну истренираност играча а израчунава се као збир свих вештина у односу на старост). Друга вредност, 'уууу', представља играчев максимални могући ниво истренираности и то под условом да се непрекидно тренира до своје 28. године. Примера ради, играчи са потенцијалом "уууу > 2000" су кандидати за репрезентацију. 
 foxtrick.HTMSPoints.AddToPlayer.desc=Прикажи HTMS-бодове на страници играча 
 foxtrick.HTMSPoints.AddToSearchResult.desc=Прикажи HTMS-бодове и код играча на страници резултата претраге трансфера
