locale/es_ca: apply patch in #703.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6100 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/es_ca/foxtrick.properties
+++ b/content/locale/es_ca/foxtrick.properties
@@ -550,7 +550,7 @@ Speciality=Especialidad
 Speciality.abbr=Esp
 
 Last_match=Último partido
-Las_matc.abbr=Último
+Last_match.abbr=Último
 Last_stars=Estrellas
 Last_stars.abbr=Est
 Last_position=Última posición
