Serbian Translation update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6113 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -26,6 +26,14 @@ foxtrick.AttVsDef.oldstyle.desc=стари стил
 foxtrick.AttVsDef.newstyle.desc=нови стил
 foxtrick.AttVsDef.oldstyleifkseparated.desc=стари стил (са одвојеним индиректним ударцима)
 foxtrick.Ratings.desc=Додаје рејтинге у меч извештају.
+foxtrick.Ratings.HatStats.desc=HatStats
+foxtrick.Ratings.HatStatsTotal.desc=HatStats (укупно)
+foxtrick.Ratings.HatStatsSeparated.desc=HatStats (по деловима терена)
+foxtrick.Ratings.LoddarStats.desc=LoddarStats
+foxtrick.Ratings.PeasoStats.desc=PeasoStats
+foxtrick.Ratings.VnukStats=VnukStats
+foxtrick.Ratings.HTitaVal=HTitaVal
+foxtrick.Ratings.GardierStats=GardierStats
 foxtrick.BookmarkAdjust.desc=Промените боју иконице маркера убацивањем одговарајућег кода за жељену боју у угластој загради у тексту коментара за маркер: '[cyan] текст' ће се појавити као 'cyan' иконица. Могући кодови за боје су: aqua, B, black, blue, brown, cyan, darkpurple, green, idea, lightblue, lightgreen, orange, pink, purple, red, white и yellow.
 foxtrick.FoxtrickAlert.desc=Даје вам поп-ап слајдер са обавештењима из Хеттрик телекса (такође даје и звучно обавештење за догађаје из телекса).
 foxtrick.FoxtrickAlert.AlertSlider.desc=Прикажи слајдер са обавештењима.
@@ -706,8 +714,14 @@ foxtrick.tweaks.recentvisitors=Скорашњи посетиоци
 foxtrick.tweaks.copyplayerad=Ископирај податке о играчу у меморију
 foxtrick.tweaks.copied=Подаци о играчу су ископирани y меморију.
 foxtrick.tweaks.bornin=Националност
-HatStatsDetailed=Хатстатс (детаљно)
-HatStatsTotalOnly=Хатстатс (укупно)
+
+ratings.HatStats=HatStats
+ratings.LoddarStats=LoddarStats
+ratings.PeasoStats=PeasoStats
+ratings.VnukStats=VnukStats
+ratings.HTitaVal=HTitaVal
+ratings.GardierStats=GardierStats
+
 foxtrick.tweaks.copyratings.both=Ископирај оцене са меча у меморију (ХТ-ББКод стил)
 foxtrick.tweaks.copyratings.home=Ископирај меч оцене домаћег тима у меморију (ХТ-ББКод стил)
 foxtrick.tweaks.copyratings.away=Ископирај меч оцене гостујућег тима у меморију (ХТ-ББКод стил)
@@ -843,8 +857,8 @@ HTMSPoints=HTMS-бодови:
 HTMSPoints.AbilityAndPotential=вештине:%1 / потенцијал:%2
 
 # CrossTable
-CrossTable.graph=Графикон пласмана у лиги.
-CrossTable.table=Табела са резултатима.
+CrossTable.graph=Графикон пласмана у лиги
+CrossTable.table=Табела са резултатима
 # will be shown as "R13" denoting round 13
 CrossTable.round=K%s
 
@@ -864,7 +878,7 @@ Loading=Учитавање у току…
 oauth.authorize=Молимо вас да дозволите Фокстрику приступ подацима о вашем тиму!
 oauth.instructions=Ускоро ће вам се отворити нова страница. Молимо вас да унесете ваше корисничко име и лозинку на Хеттрику како би добили ваш лични идентикациони број(PIN). У поље испод, унесите свој PIN да дозволите Фокстрику да преузима податке о вашем тиму:
 oauth.success=Фокстрик је добио вашу дозволу за приступ! Молимо вас да освежите ову страницу да би видели додатне информације и функције које вам Фокстрик пружа.
-oauth.unauthorized=Дозвола за приступ подацима на Хеттрику није активна. Морате прво дозволити Фокстрику да приступи подацими о вашем тиму.
+api.failure=Дозвола за приступ подацима на Хеттрику није активна. Морате прво дозволити Фокстрику да приступи подацими о вашем тиму. Уколико сте већ дали доѕволу, проверите да ли сте повезани на интернет или покушајте поново касније.
 
 # End of IN-GAME STRINGS.
 
