Serbian Translation update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6114 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -623,6 +623,7 @@ weak=слаб
 foxtrick.matchdetail.midfield=Везни ред
 foxtrick.matchdetail.attack=Напад
 foxtrick.matchdetail.defence=Одбрана
+foxtrick.matchdetail.total=Укупно
 foxtrick.shortcut.matchlineup=постава
 
 foxtrick.matchdetail.right=Десно
