es_su locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6116 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/es_SU/foxtrick.properties
+++ b/content/locale/es_SU/foxtrick.properties
@@ -164,6 +164,7 @@ foxtrick.TeamSelectBox.desc=Reemplaza la lista de jugadores por un cuadro de sel
 foxtrick.TeamSelectBox.AlsoYouthPlayers.desc=También remplaza la lista de jugadores por una caja de selección, en la página de jugadores del Equipo juvenil
 foxtrick.CopyPlayerAd.desc=Añade en la página del jugador, que permite copiar su información (en HT-ML)
 foxtrick.CopyPlayerAd.Sorted.desc=Ordenar las habilidades en orden descendente
+foxtrick.CopyPlayerAd.NonTableStyle.desc=Copiar en texto simple sin el estilo de tabla.
 foxtrick.CustomMedals.desc=Reemplaza las medallas del nuevo diseño de Hattrick, por las medallas del diseño antiguo
 foxtrick.SeniorTeamShortCuts.desc=Añade enlaces a Entrenador y Última Alineación de la página del equipo
 foxtrick.SeniorTeamShortCuts.OnlyOtherPages.desc=Mostrar unicamente en la página de otros equipos
@@ -360,6 +361,20 @@ foxtrick.ForumThreadAutoIgnore.Whitelist_ThreadIDs.desc=Lista de temas aceptados
 foxtrick.TableSort.desc=Convierte las tablas 'propiamente realizadas' ordenables, cuando cuenten con encabezado (incluyendo las tablas en los mensajes del foro)
 foxtrick.LiveAlert.desc=Alertar de log goles de HT Live
 foxtrick.OldStyleFace.desc=Mostrar caras en el estilo antiguo
+foxtrick.NtPeek.desc=Vista previa de los partidos de la Selección Nacional Mayor/Sub20 en MyHattrick
+foxtrick.SeriesFlags.desc=Mostrar banderas de la liga a un lado del enlance al equipo y/o nombre de usurio (imagenes gracias a HTMS)
+foxtrick.SeriesFlags.Guestbook.desc=Mostrar en el Libro de visitas
+foxtrick.SeriesFlags.Supporters.desc=Mostrar en la vista de supporters del equipo
+foxtrick.SeriesFlags.Visitors.desc=Mostrar en la sección de Visitas recientes
+foxtrick.SeriesFlags.Oldies.desc=Mostrar en página de jugadores promocionados y entrenador
+foxtrick.HTMSPoints.desc=Mostrar los puntos de entrenamientos para el jugador calculado con la tabla de habilidad de HTMS
+foxtrick.HTMSPoints.AddToPlayer.desc=Mostrar en la página del jugador
+foxtrick.HTMSPoints.AddToSearchResult.desc=Mostrar en la página de transferencias
+foxtrick.HTMSPoints.AddToPlayerList.desc=Mostrar en la página de jugadores
+foxtrick.FriendlyInterface.desc=Ajustes para tener una interfaz más amigable
+foxtrick.FriendlyInterface.FullPlayerNameInLineUp.desc=Mostrar el nombre de los jugadores sin elipses en el reporte del partido
+foxtrick.FriendlyInterface.NtLinkForNtPlayer.desc=Mostrar equipos nacionales como enlaces para los jugadores locales
+foxtrick.FriendlyInterface.HideAnswerTo.desc=Esconder enlaces para responder en el Libro de visitas
 
 # -----------------------------------------------------------------------------
 # IN-GAME STRINGS. translate first
@@ -384,9 +399,8 @@ foxtrick.HistoryStats.cupwinner=Ganador Copa
 foxtrick.HistoryStats.cupwinner.short=GC
 
 # YouthPromoteDays
-foxtrick.youthpromotedays.prom_d=El jugador puede ser promocionado en
-foxtrick.youthpromotedays.days=días.
-foxtrick.youthpromotedays.prom_t=El jugador puede ser promocionado hoy!
+YouthPromotes.future=El jugador puede ser promocionado en %1 día(s) luego en %2.
+YouthPromotes.today=El jugador puede ser promocionado hoy!
 
 # links
 foxtrick.links.boxheader=Enlaces
@@ -450,7 +464,7 @@ delete_template_ask=¿Borrar plantilla?
 ok=OK
 
 #PostPreview
-show_preview_from_post=Mostrar Vista Previa del mensaje
+show_preview_from_post=Mostrar Vista previa del mensaje
 preview=Vista previa
 sendmessage=Enviar
 
@@ -525,6 +539,11 @@ Keeper.abbr=ARQ
 #'Set pieces' (with a space) changed to 'Set_pieces' (with underscore). make sure it's changed in your local copy
 Set_pieces=Pelota Parada
 Set_pieces.abbr=PP
+
+HTMS_Ability=Puntos de habilidad HTMS
+HTMS_Ability.abbr=Habilidad
+HTMS_Potential=Puntos de potencial HTMS
+HTMS_Potential.abbr=Potencial
 
 PlayerCategory=Categoría del jugador
 PlayerCategory.abbr=Ca
@@ -666,17 +685,23 @@ foxtrick.defensiveTrainer=Un entrenador %s de mentalidad defensiva
 foxtrick.offensiveTrainer=Un entrenador %s de mentalidad ofensiva.
 foxtrick.balancedTrainer=Un entrenador %s que no es ni ofensivo ni defensivo.
 
+ntpeek.title=Partidos recientes de la Selección
+
+htLive=HT Live
+
 foxtrick.onpagepreferences=Preferencias FoxTrick en la página
 foxtrick.modules_allpages=Módulos que se ejecutan en todas las páginas
 HTLanguageChanged=Has seleccionado en las preferencias de Foxtrick, que el idioma de Foxtrick se adapte automáticamente cuando escojas otro idioma en HT. El idioma de Foxtrick es: %s.
+
+
 Screenshot=Captura de pantalla de las caracteristicas del módulo
 #  NOTE TO TRANSLATORS
 # You can use the following string to link to release notes in your language. The link better be generic, as you might not translate before actual release, i.e. link should be valid for all releases
 #  NOTE TO TRANSLATORS
 # You can use the following string to link to a topic on Hattrick Forum in your language. In that case translate the string and replace 'languages' with your own language and add relative path to the forum topic in your national forum (go to your forum topic and copy link without 'http://www**.hattrick.org')
 
-StyleTutorial.title=Estilo FoxTrick
-StyleTutorial.content=FoxTrick provee un conjunto cambios en la presentación, para que los usuarios puedan personalizar sus propios estilos. \nEstos cambios se dan atraves de ids y clases HTML, adicionalmente puedes ysar CSS para definir tu estilo preferido. \nUn estilo de ejemplo puede ser encontrado en %s, puedes modificarlo deacuerdo a lo que necesites.\nLuego de guardar el archivo, puedes usar el módulo de SkinPlugin de FoxTrick para cargar el archivo CSS, para que surtan effectos tus cambios.
+StyleTutorial.title=Estilos de FoxTrick
+StyleTutorial.content=FoxTrick provee un conjunto de interfaces para usuarios que quieran personalizar sus estilos.\nEstos ajustes se dan atraves de ids HTML y clases, puedes usar CSS para definir tu estilo preferido.\nUn ejemplo de estilo de usuario puede ser encontrado en %s, el cual puedes modificar para que se ajuste a lo que necesitas.\nSi tienes un problema con el enlace, copia y pega el enlace en la barra de direcciones. Luego de guardad el archivo, puedes usar el odulo de SkinPlugin para cargar el archivo CSSpara que el estilo de usuario surta efecto.
 
 # changes categories
 new=Nuevo
@@ -706,7 +731,7 @@ foxtrick.tweaks.copyratings.away=Copiar las calificaciones del equipo visitante 
 foxtrick.tweaks.ratingscopied=Las calificaciones han sido copiadas al portapapeles.
 foxtrick.tweaks.youthclub=hattrick-youthclub.org
 foxtrick.tweaks.copytrainingreport=Copiar el reporte de entrenamiento al portapapeles
-foxtrick.tweaks.copyskilltable=Copiar la tabla de habilidades al portapapeles (códgio para el foro de HT-ML)
+foxtrick.tweaks.copyskilltable=Copiar la tabla de habilidades al portapapeles (código HT-ML para el foro)
 foxtrick.tweaks.copyscoutreport=Copiar el reporte del scout al portapapeles
 foxtrick.tweaks.scoutreportcopied=El comentario del scout ha sido copiado al portapapeles
 foxtrick.tweaks.copyplayerscource=Copiar código del jugador al portapapeles (pusado en hattrick-youthclub.org)
@@ -832,6 +857,16 @@ foxtrick.htmsStatistics.windrawloss=Victoria/Empate/Pérdida
 foxtrick.htmsStatistics.linkcaption=Análisis del partido por HTMS
 foxtrick.htmsStatistics.changePrediction=Cambiar predicción
 
+# HTMSPoints
+HTMSPoints=Puntos HTMS:
+HTMSPoints.AbilityAndPotential=Habilidad: %1 / Potencial: %2
+
+# CrossTable
+CrossTable.graph=Gráfica de la temporada
+CrossTable.table=Tabla Cruzada
+# will be shown as "R13" denoting round 13
+CrossTable.round=R%s
+
 #actions
 Copy=Copiar
 View=Vista
@@ -842,6 +877,21 @@ Filter=Filtro
 button.ok=OK
 button.cancel=Cancelar
 button.close=Cerrar
+button.customize=Personalizar
+button.save=Guardar
+button.go=Ir!
+button.authorize=Autorizar
+button.export=Exportar
+button.import=Importar
+button.restoreDefault=Restaurar predeterminado
+button.disableAll=Deshabilitar todo
+
+Loading=Cargando…
+
+oauth.authorize=Autorizar FoxTrick para accesar a los datos de tu equipo
+oauth.instructions=Una nueva página se abrirá en breve. Por favor ingresa tu nombre de usuario y contraseña de Hattrick para conseguir un código de vereificación. Copia el codigo aquí para autorizar a FoxTrick para accedera los datos de tu equipo:
+oauth.success=FoxTrick has sido autorizado correctamente! Por favor recarga la página para ver información detallada provista por Foxtrick
+oauth.unauthorized=Fallo al acceder a tus datos de Hattrick. Primero necesitar autorizar a Foxtrick para que acceda a tusdatos.
 
 # End of IN-GAME STRINGS.
 
@@ -891,22 +941,30 @@ foxtrick.prefs.labelSavePrefs=Exportar las preferencias y/o configuración perso
 foxtrick.prefs.labelSavePrefs_Prefs=Preferencias
 foxtrick.prefs.labelSavePrefs_Notes=Configuración personal (notas, plantillas y enlaces personalizados)
 foxtrick.prefs.labelLoadPrefs=Importar preferencias (Las preferencias pueden sobre escribirse. Requiere reiniciar)
+foxtrick.prefs.labelLoadPrefs=Importar preferencias (Las preferencias actuales serán sobreescritas)
+foxtrick.prefs.loadNotice=Pega tus preferencias guardadas en el cuadro de texto y presiona "Importar".
 foxtrick.prefs.captionDisableSettings=Deshabilitar Foxtrick
 foxtrick.prefs.captionFoxtrickFirstRun=Foxtrick Mi HT
 foxtrick.prefs.labelFoxtrickFirstRun=Selecciona la version de la cual quieres que se muestren lo que ha cambiado en Mi HT
 foxtrick.prefs.stagepref=Desahabilitar Foxtrick en el servidor de Stage
 foxtrick.prefs.disableTemporaryLabel=Deshabilitar Foxtrick temporalmente
 foxtrick.prefs.saved=Preferencias Guardadas!
+foxtrick.prefs.loaded=Preferencias cargadas!
+foxtrick.prefs.dismissNotice=(clic para descartar este aviso)
 
-button.save=Guardar
-foxtrick.prefs.buttonCancel=Cancelar
-foxtrick.prefs.buttonReset=Resetear
-button.customize=Personalizar
-button.restoreDefault=Restaurar valores predeterminados
-button.disableAll=Deshabilitar todos
-button.export=Guardar
-button.import=Cargar
-foxtrick.prefs.activeCurrencyConverter=Habilitar convertidor de divisa
+link.title=Enlaces
+link.homepage=Página de inicio
+link.bugTracker=Reportar un error
+link.hattrickForum=Foro de Foxtrick en Hattrick
+link.screenshots=Captura de pantalla
+link.nightlyFirefox=Versiones en desarrollo para Firefox
+link.nightlyChrome=Versiones en desarrollo  para Google Chrome
+link.recentChanges=Cambios recientes
+
+foxtrick.showReleaseNotes=Mostrar notas de la versión luego de que Foxtrick se actualice
+foxtrick.versionReleaseNotes=Notas de la versión para:
+
+about.copyright=Copyright
 
 about.headDevelopers=Desarrolladores en Jefe
 about.projectOwners=Propietarios Proyecto
