--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -877,7 +877,7 @@ button.authorize=Дозволи
 
 Loading=Учитавање у току…
 oauth.authorize=Молимо вас да дозволите Фокстрику приступ подацима о вашем тиму!
-oauth.instructions=Ускоро ће вам се отворити нова страница. Молимо вас да унесете ваше корисничко име и лозинку на Хеттрику како би добили ваш лични идентикациони број(PIN). У поље испод, унесите свој PIN да дозволите Фокстрику да преузима податке о вашем тиму:
+oauth.instructions=Ускоро ће вам се појавити линк ка страници чија адреса почиње са "chpp.hattrick.org". Молимо вас да отворите ту страницу и унесете ваше корисничко име и лозинку на Хеттрику како би добили ваш лични идентикациони број(PIN). Потом у поље испод, унесите свој PIN да дозволите Фокстрику да преузима податке о вашем тиму.
 oauth.success=Фокстрик је добио вашу дозволу за приступ! Молимо вас да освежите ову страницу да би видели додатне информације и функције које вам Фокстрик пружа.
 api.failure=Дозвола за приступ подацима на Хеттрику није активна. Морате прво дозволити Фокстрику да приступи подацими о вашем тиму. Уколико сте већ дали доѕволу, проверите да ли сте повезани на интернет или покушајте поново касније.
 
