it lang file updated
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6121 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/it/foxtrick.properties
+++ b/content/locale/it/foxtrick.properties
@@ -418,10 +418,22 @@ foxtrick.ExtraShortcuts.transfers=Trasferimenti
 foxtrick.ExtraShortcuts.prefs=Preferenze
 foxtrick.ExtraShortcuts.ftprefs=Preferenze di FoxTrick
 
-# YouthPromoteDays
-foxtrick.youthpromotedays.prom_d=Il giocatore non può essere promosso prima di
-foxtrick.youthpromotedays.days=giorni
-foxtrick.youthpromotedays.prom_t=Il giocatore può essere promosso oggi!
+#HistoryStats
+foxtrick.HistoryStats.season=Stagione
+foxtrick.HistoryStats.season.short=S
+foxtrick.HistoryStats.cup=Turni di coppa
+foxtrick.HistoryStats.cup.short=C
+foxtrick.HistoryStats.league=Serie
+foxtrick.HistoryStats.league.short=Ser.
+foxtrick.HistoryStats.pos=Posizione finale nella serie
+foxtrick.HistoryStats.pos.short=P
+foxtrick.HistoryStats.label=Statistiche
+foxtrick.HistoryStats.cupwinner=Vincitore di coppa
+foxtrick.HistoryStats.cupwinner.short=VC
+
+# YouthPromotes
+YouthPromotes.future=Il giocatore può essere promosso tra %1 giorno/i ovvero il %2.
+YouthPromotes.today=Il giocatore può essere promosso oggi!
 
 # links
 foxtrick.links.boxheader=Collegamenti
@@ -506,6 +518,7 @@ ForumYouthIcons.youthteamid=Collegamento a squadra giovanile
 ForumYouthIcons.youthmatchid=Aggiunge icona collegamento a partita giovanile
 ForumYouthIcons.youthseries=Aggiunge icona collegamento a serie giovanile
 #special bbcode, not really youth icons
+ForumSpecialBBCode.q=Aggiunge citazione
 ForumSpecialBBCode.hr=Aggiunge icona riga orizzontale
 ForumSpecialBBCode.br=Aggiunge icona ritorno a capo
 ForumSpecialBBCode.user=Aggiunge icona codice utente
@@ -514,6 +527,9 @@ ForumSpecialBBCode.article=Aggiunge icona codice articolo
 ForumSpecialBBCode.clock=Aggiunge icona ora attuale
 ForumSpecialBBCode.spoiler=Aggiunge icona spoiler
 ForumSpecialBBCode.pre=Aggiunge icona formattazione'pre'
+ForumSpecialBBCode.table=Inserisce il tag 'table' convertendo il testo selezionato in una tabella: le linee sono convertite in righe, il testo separato da "%s" in celle.
+ForumSpecialBBCode.tableSeparator=Converte "%s" in celle
+ForumSpecialBBCode.enterSeparator=Inserisci un separatore personalizzato
 
 #Transferlistfilters
 foxtrick.transferfilter.Enter_filter_name=Inserisci nome filtro:
@@ -573,6 +589,8 @@ categories.R=R
 categories.E1=E1
 categories.E2=E2
 
+General=Generale
+
 PlayerNumber=Numero maglia
 PlayerNumber.abbr=#
 
@@ -626,8 +644,17 @@ NrOfMatches=Partite Giocate
 NrOfMatches.abbr=PG
 LeagueGoals=Gol in questa stagione
 LeagueGoals.abbr=GStag
+CupGoals=Gol in coppa
+CupGoals.abbr=GC
 CareerGoals=Gol in carriera
 CareerGoals.abbr=GTot
+Hattricks=Hattrick
+Hattricks.abbr=HT
+
+Current_club=Squadra attuale
+Current_club.abbr=Squadra
+Current_league=Serie attuale
+Current_league.abbr=Serie
 
 #Skills
 weak=debole
