Russian locale update up to MLF r6110
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6131 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/ru/foxtrick.properties
+++ b/content/locale/ru/foxtrick.properties
@@ -1,5 +1,5 @@
 ﻿# ru-RU (Russian language file)
-# based on MASTER language file r6099
+# based on MASTER language file r6110
 # by _KOHb_ [teamId=28914]
 
 # Hints:
@@ -27,6 +27,14 @@ foxtrick.AttVsDef.oldstyle.desc=старый стиль
 foxtrick.AttVsDef.newstyle.desc=новый стиль
 foxtrick.AttVsDef.oldstyleifkseparated.desc=старый стиль (стандарты — отдельно)
 foxtrick.Ratings.desc=Рейтинги на странице матча
+foxtrick.Ratings.HatStats.desc=HatStats
+foxtrick.Ratings.HatStatsTotal.desc=HatStats (общий)
+foxtrick.Ratings.HatStatsSeparated.desc=HatStats (отдельно по линиям)
+foxtrick.Ratings.LoddarStats.desc=LoddarStats
+foxtrick.Ratings.PeasoStats.desc=PeasoStats
+foxtrick.Ratings.VnukStats=VnukStats
+foxtrick.Ratings.HTitaVal=HTitaVal
+foxtrick.Ratings.GardierStats=GardierStats
 foxtrick.BookmarkAdjust.desc=Изменение связанного с добавляемой закладкой значка в соответствии с кодом в квадратных скобках; например, [cyan] покажет голубой значок. Возможные варианты: aqua (цвет морской волны), B (символ B), black (черный), blue (синий), brown (коричневый), cyan (голубой), darkpurple (фиолетовый), green (зелёный), idea (идея), lightblue (светло-синий), lightgreen (светло-зелёный), orange (оранжевый), pink (розовый), purple (пурпурный), red (красный), white (белый), yellow (жёлтый)
 foxtrick.FoxtrickAlert.desc=Показывает всплывающее уведомление и проигрывать звук, даже если окно браузера не активно
 foxtrick.FoxtrickAlert.AlertSlider.desc=Показывать всплывающее уведомление
@@ -289,7 +297,7 @@ foxtrick.MatchIncome.desc=Доход от матча в отчёте
 foxtrick.YouthSkillHideUnknown.desc=Больше пространства на странице игрока юношеской команды
 foxtrick.YouthSkillHideUnknown.HideUnknown.desc=Скрыть неизвестные навыки игрока юношеской команды
 foxtrick.YouthSkillHideUnknown.HideMaximalKeyWord.desc=Убирает слово 'максимум' в отображении известных навыков для увеличения полезного пространства, например, при включенных лицах игроков
-foxtrick.SkillTable.desc=Показывать известные навыки игрока в виде таблицы. Используйте модуль "ExtraPlayerInfo" для отображения дополнительной информации.
+foxtrick.SkillTable.desc=Показывать известные навыки игрока в виде таблицы.
 foxtrick.SkillTable.OtherTeams.desc=Включить для других команд
 foxtrick.HighlightCupwins.desc=Посвечивает выигравшую команду на странице матчей кубка
 foxtrick.HighlightCupwins.HighlightCupsets.desc=Подсвечивать результат в случае победы команды с более низким кубковым рангом
@@ -589,6 +597,7 @@ Current_league.abbr=Лига
 foxtrick.matchdetail.midfield=Полузащита
 foxtrick.matchdetail.attack=Атака
 foxtrick.matchdetail.defence=Защита
+foxtrick.matchdetail.total=Общий
 foxtrick.shortcut.matchlineup=расстановка
 
 foxtrick.matchdetail.right=справа
@@ -654,8 +663,14 @@ foxtrick.tweaks.overview=Об игроке
 foxtrick.tweaks.writeinguestbook=Написать в гостевую книгу
 foxtrick.tweaks.copyplayerad=Скопировать информацию об игроке в буфер обмена
 foxtrick.tweaks.copied=Данные игрока скопированы в буфер обмена.
-HatStatsDetailed=HatStats (по линиям)
-HatStatsTotalOnly=HatStats (всего)
+
+ratings.HatStats=HatStats
+ratings.LoddarStats=LoddarStats
+ratings.PeasoStats=PeasoStats
+ratings.VnukStats=VnukStats
+ratings.HTitaVal=HTitaVal
+ratings.GardierStats=GardierStats
+
 foxtrick.tweaks.copyratings.both=Скопировать рейтинги (в формате HT-ML)
 foxtrick.tweaks.copyratings.home=Скопировать рейтинги хозяев (в формате HT-ML)
 foxtrick.tweaks.copyratings.away=Скопировать рейтинги гостей (в формате HT-ML)
@@ -822,9 +837,10 @@ button.disableAll=Запретить все
 Loading=Загрузка…
 
 oauth.authorize=Авторизовать FoxTrick для доступа к данным Вашей команды
-oauth.instructions=Вскоре будет открыта новая страница. Пожалуйста, введите ваши имя и пароль к Hattrick'у на этой странице для получения кода подтверждения. Скопируйте полученный код в это поле для авторизации FoxTrick для получения данных Вашей команды:
+oauth.instructions=Вскоре появится сыллка на страницу chpp.hattrick.org.\nОткройте ссылку и введите свои имя и пароль к Hattrick'у для получения кода потверждения. Скопируйте полученный код в поле ниже для авторизации FoxTrick для получения данных Вашей команды.\nFoxTrick не будет знать Вашего пароля в течение всего процесса.
 oauth.success=FoxTrick был успешно авторизован! Пожалуйста, перезагрузите эту страницу для отображения дополнительной информации, предоставляемой FoxTrick.
-oauth.unauthorized=Ошибка авторизации в Hattrick! Вым нужно авторизовать FoxTrick для доступа к данным Вашей команды.
+
+api.failure=Ошибка доступа к данным Hattrick. Вам нужно авторизовать FoxTrick для доступа к данным. Если Вы сделали это, проверьте работу сети или попробуйте повторить попытку позже.
 
 # End of IN-GAME STRINGS.
 
