Serbian Translation update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6133 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -27,7 +27,7 @@ foxtrick.AttVsDef.newstyle.desc=нови стил
 foxtrick.AttVsDef.oldstyleifkseparated.desc=стари стил (са одвојеним индиректним ударцима)
 foxtrick.Ratings.desc=Додаје рејтинге у меч извештају.
 foxtrick.Ratings.HatStats.desc=HatStats
-foxtrick.Ratings.HatStatsTotal.desc=HatStats (укупно)
+foxtrick.Ratings.HatStatsDetailed.desc=HatStats (детаљно)
 foxtrick.Ratings.HatStatsSeparated.desc=HatStats (по деловима терена)
 foxtrick.Ratings.LoddarStats.desc=LoddarStats
 foxtrick.Ratings.PeasoStats.desc=PeasoStats
