Serbian Translation update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6137 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -667,7 +667,7 @@ foxtrick.tweaks.BirthdayToday=Рођендани данас
 foxtrick.tweaks.BirthdayLastWeek=Рођендани прошле недеље
 foxtrick.tweaks.BirthdayNextWeek=Рођендани идуће недеље
 foxtrick.copymatchid=Кликни да ископираш ИД меча у меморију
-foxtrick.ExtendedPlayerDetails.perseason=по сезони
+foxtrick.ExtendedPlayerDetails.perseason=/ по сезони
 
 foxtrick.defensiveTrainer= %s тренер, дефанзивно оријентисан.
 foxtrick.offensiveTrainer= %s тренер, нападачки оријентисан.
